# python-package-hello-world

./: .flake8  .gitignore  pyproject.toml  readme.md
.github/workflows/: checks.yml
python_package_hello_world/: __init__.py  greet.py
tests/greet/: test_greet.py
