[tool.poetry]
name = "python-package-hello-world"
version = "0.0.0"
description = "Demonstrate how to create and publish a simple Python package."
authors = ["Travis Nesland <travis@tnez.dev>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "python_package_hello_world", from = "." }]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylance = "^0.8.5"
pytest = "^8.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
